--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </header>
 
     <section class="home">
-        <!-- <div class="container"> -->
+        <div class="container">
             <div class="content">
                 <p>Join a community of XR developers & ebthusiasts in Africa</p>
                 <button class="btn">Learn More</button>
@@ -74,7 +74,7 @@
                 <!-- <img class="img2" src="./img/Ellipse 1.png" alt="" srcset="">
                 <img class="img3" src="./img/Ellipse 2.png" alt="" srcset=""> -->
             </div>
-        <!-- </div> -->
+        </div>
     </section>
 
     <!-- <section class="home">
